<resources>
    <string name="app_name">Todo App</string>
    <string name="action_settings">Settings</string>

    <string name="title_hint">Title</string>
    <string name="description_hint">Enter your description here.</string>
    <string name="action_save">Save</string>
    <string name="add_task">Add Task</string>
    <string name="due_date">Due date</string>
    <string name="delete_task">Delete Task</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Snackbar -->
    <string name="empty_task_message">Tasks cannot be empty</string>
    <string name="task_marked_complete">Task marked complete</string>
    <string name="task_marked_active">Task marked active</string>

    <!-- Preference Titles -->
    <string name="reminder_header">Reminder</string>

    <!-- Notification -->
    <string name="pref_key_notify">key_notification</string>
    <string name="pref_notify_name">Notification</string>
    <string name="pref_notify_summary">Daily reminder for nearest active task.</string>
    <string name="notify_channel_name">Task Reminder</string>
    <string name="notify_content">Due in %1$s.</string>

    <!-- Filter -->
    <string name="action_filter">filter</string>
    <string name="filter_all">All</string>
    <string name="filter_active">Active</string>
    <string name="filter_completed">Completed</string>
    <string name="image_sign">Image Sign</string>
    <string name="tambah_gambar">tambah gambar</string>
    <string name="departemen">Departemen</string>
    <string name="tanggal_kembali">Tanggal kembali</string>
    <string name="keterangan">keterangan</string>
    <string name="tanda_tangan">Tanda-tangan</string>
    <string name="search_view">Search View</string>
    <string name="search_hint">Masukkan kata</string>
    <string name="logo">logo</string>
    <string name="tanjung_enim_lestari">Tanjung Enim Lestari</string>

</resources>